@@ -1,5 +1,6 @@
 version 1.0.6 (not yet released)
 --------------------------------
+* added support for cylindrical equal area ('cea') projection.
 * add 'arcgisimage' method for displaying background image retrieved from
   an ArcGIS server using the REST API (requires using 'epsg' keyword to define projection).
 * add 'epsg' keyword for defining projections.
